--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   intl: ^0.18.0 # Use the latest version available
   cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.4.9
+  file_picker: ^6.2.0
+  http: ^1.2.0
+  pdf_viewer_flutter: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -51,5 +54,6 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/pdf/
     # - assets/icons/
     # - .env
