--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   file_picker: ^6.2.0
   http: ^1.2.0
   pdf_viewer_flutter: ^1.0.2
+  syncfusion_flutter_pdfviewer: ^29.1.41
 
 dev_dependencies:
   flutter_test:
