--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^1.2.0
   pdf_viewer_flutter: ^1.0.2
   syncfusion_flutter_pdfviewer: ^29.1.41
+  audioplayers: ^5.2.1
+  path: ^1.8.3
   flutter_dotenv: ^5.2.1
   dio: ^5.8.0+1
 
