--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,14 @@ dependencies:
   path: ^1.8.3
   flutter_dotenv: ^5.2.1
   dio: ^5.8.0+1
+  path_provider: ^2.1.5
+  google_speech: ^5.3.0
+  googleapis: ^14.0.0
+  googleapis_auth: ^1.6.0
+  permission_handler: ^10.4.0
+  flutter_local_notifications: ^15.1.1
+  file_picker: ^5.3.3
+
 
 dev_dependencies:
   flutter_test:
@@ -60,4 +68,6 @@ flutter:
   assets:
     - assets/images/
     - assets/pdf/
+    - assets/audio/
+    - assets/credentials/
     - .env
